<resources>
    <string name="app_name">Location Reminders</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_desc_details">Reminder Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="save_location_button">Save Location</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="settings">Settings</string>

    <!-- Error strings -->
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="toast_select_location">Select a location</string>
    <string name="location_required_explanation">Location must be enabled to use the app</string>
    <string name="permission_required">Permission Required!</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofences_not_removed">Geofence is not removed</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>
    <string name="geofences_added">Geofence Added Successfully</string>
    <string name="geofences_not_added">Geofence is not added. Try again later.</string>
    <string name="rationale_title">Permissions are needed to know your location</string>
    <string name="rationale_desc">Please provide location permissions to use this app functionality</string>
    <string name="geofence_entered">Entered Geofence</string>
</resources>
